StudentSupportCallFormView: Resolving misc layout issues

--- a/app/instructionalSupport/studentSupportCallForm/studentSupportCallForm.css
+++ b/app/instructionalSupport/studentSupportCallForm/studentSupportCallForm.css
@@ -20,9 +20,9 @@
 
 .move-course-icon {
     position: absolute;
-    left: -30px;
-    top: 15px;
-    font-size: 15pt;
+    left: -20px;
+    top: 19px;
+    font-size: 12pt;
     color: #373e4a;
     cursor: pointer;
 }
@@ -73,10 +73,6 @@
     right: 0;
     top: 10px;
     color: #000;
-}
-
-.student-course-info {
-    margin-left: 55px;
 }
 
 .student-course_title {
@@ -218,40 +214,7 @@ h4, .h4 {
 	align-items: center;
 }
 
-/* Properly isolated styles */
-.instructor-support-call-form {
-	padding-left: 6%;
-	padding-right:6%;
-}
-
-.instructor-support-call-form .section-group-header {
-	border-right: 1px solid;
-	border-color: rgb(235, 235, 235);
-	color: rgb(51, 51, 51);
-	background-color: rgb(245, 245, 246);
-	font-size: 14px;
-	height: 34px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	border-top: 1px solid rgb(235, 235, 235);
-	border-left: 1px solid rgb(235, 235, 235);
-}
-
-.instructor-support-call-form .preferences-container {
-	border-top: 1px solid rgb(235, 235, 235);
-	border-left: 1px solid rgb(235, 235, 235);
-	border-bottom: 1px solid rgb(235, 235, 235);
-	padding-bottom: 10px;
-	height: 100%;
-}
-
-.instructor-support-call-form .section-group-container:last-child {
-	border-right: 1px solid rgb(235, 235, 235);
-}
-
-
-.instructor-support-call-form .preference-box {
+.student-support-call-form .student-course{
 	border-radius: 4px;
 	border: 1px solid #adadad;
 	background-color: white;
